--- a/lab3/main.ipynb
+++ b/lab3/main.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -53,8 +53,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-29T16:40:23.612491900Z",
-     "start_time": "2024-09-29T16:40:23.568786200Z"
+     "end_time": "2024-09-29T17:29:48.695991500Z",
+     "start_time": "2024-09-29T17:29:48.616240900Z"
     }
    },
    "id": "26f19d88312f28c4"
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "outputs": [
     {
      "data": {
       "text/plain": "          longitude      latitude  housing_median_age   total_rooms  \\\ncount  17000.000000  17000.000000        17000.000000  17000.000000   \nmean    -119.562108     35.625225           28.589353   2643.664412   \nstd        2.005166      2.137340           12.586937   2179.947071   \nmin     -124.350000     32.540000            1.000000      2.000000   \n25%     -121.790000     33.930000           18.000000   1462.000000   \n50%     -118.490000     34.250000           29.000000   2127.000000   \n75%     -118.000000     37.720000           37.000000   3151.250000   \nmax     -114.310000     41.950000           52.000000  37937.000000   \n\n       total_bedrooms    population    households  median_income  \\\ncount    17000.000000  17000.000000  17000.000000   17000.000000   \nmean       539.410824   1429.573941    501.221941       3.883578   \nstd        421.499452   1147.852959    384.520841       1.908157   \nmin          1.000000      3.000000      1.000000       0.499900   \n25%        297.000000    790.000000    282.000000       2.566375   \n50%        434.000000   1167.000000    409.000000       3.544600   \n75%        648.250000   1721.000000    605.250000       4.767000   \nmax       6445.000000  35682.000000   6082.000000      15.000100   \n\n       median_house_value  \ncount        17000.000000  \nmean        207300.912353  \nstd         115983.764387  \nmin          14999.000000  \n25%         119400.000000  \n50%         180400.000000  \n75%         265000.000000  \nmax         500001.000000  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>longitude</th>\n      <th>latitude</th>\n      <th>housing_median_age</th>\n      <th>total_rooms</th>\n      <th>total_bedrooms</th>\n      <th>population</th>\n      <th>households</th>\n      <th>median_income</th>\n      <th>median_house_value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>17000.000000</td>\n      <td>17000.000000</td>\n      <td>17000.000000</td>\n      <td>17000.000000</td>\n      <td>17000.000000</td>\n      <td>17000.000000</td>\n      <td>17000.000000</td>\n      <td>17000.000000</td>\n      <td>17000.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>-119.562108</td>\n      <td>35.625225</td>\n      <td>28.589353</td>\n      <td>2643.664412</td>\n      <td>539.410824</td>\n      <td>1429.573941</td>\n      <td>501.221941</td>\n      <td>3.883578</td>\n      <td>207300.912353</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>2.005166</td>\n      <td>2.137340</td>\n      <td>12.586937</td>\n      <td>2179.947071</td>\n      <td>421.499452</td>\n      <td>1147.852959</td>\n      <td>384.520841</td>\n      <td>1.908157</td>\n      <td>115983.764387</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>-124.350000</td>\n      <td>32.540000</td>\n      <td>1.000000</td>\n      <td>2.000000</td>\n      <td>1.000000</td>\n      <td>3.000000</td>\n      <td>1.000000</td>\n      <td>0.499900</td>\n      <td>14999.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>-121.790000</td>\n      <td>33.930000</td>\n      <td>18.000000</td>\n      <td>1462.000000</td>\n      <td>297.000000</td>\n      <td>790.000000</td>\n      <td>282.000000</td>\n      <td>2.566375</td>\n      <td>119400.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>-118.490000</td>\n      <td>34.250000</td>\n      <td>29.000000</td>\n      <td>2127.000000</td>\n      <td>434.000000</td>\n      <td>1167.000000</td>\n      <td>409.000000</td>\n      <td>3.544600</td>\n      <td>180400.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>-118.000000</td>\n      <td>37.720000</td>\n      <td>37.000000</td>\n      <td>3151.250000</td>\n      <td>648.250000</td>\n      <td>1721.000000</td>\n      <td>605.250000</td>\n      <td>4.767000</td>\n      <td>265000.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>-114.310000</td>\n      <td>41.950000</td>\n      <td>52.000000</td>\n      <td>37937.000000</td>\n      <td>6445.000000</td>\n      <td>35682.000000</td>\n      <td>6082.000000</td>\n      <td>15.000100</td>\n      <td>500001.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 57,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,8 +90,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-29T16:40:23.960530600Z",
-     "start_time": "2024-09-29T16:40:23.582516600Z"
+     "end_time": "2024-09-29T17:29:48.738920200Z",
+     "start_time": "2024-09-29T17:29:48.621253500Z"
     }
    },
    "id": "c679313f4e46fae1"
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 88,
    "outputs": [
     {
      "data": {
@@ -227,8 +227,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-29T16:40:24.595705900Z",
-     "start_time": "2024-09-29T16:40:23.631240200Z"
+     "end_time": "2024-09-29T17:29:49.663368900Z",
+     "start_time": "2024-09-29T17:29:48.673468400Z"
     }
    },
    "id": "5cd76a43f41b04cd"
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 89,
    "outputs": [
     {
      "name": "stdout",
@@ -277,8 +277,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-29T16:40:24.655979800Z",
-     "start_time": "2024-09-29T16:40:24.597707600Z"
+     "end_time": "2024-09-29T17:29:49.682214500Z",
+     "start_time": "2024-09-29T17:29:49.659850200Z"
     }
    },
    "id": "c37d8b81197bf425"
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 90,
    "outputs": [
     {
      "name": "stdout",
@@ -338,8 +338,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-29T16:40:24.662376100Z",
-     "start_time": "2024-09-29T16:40:24.612329100Z"
+     "end_time": "2024-09-29T17:29:49.768189Z",
+     "start_time": "2024-09-29T17:29:49.677179900Z"
     }
    },
    "id": "18965d9380ffe177"
@@ -348,7 +348,8 @@
    "cell_type": "markdown",
    "source": [
     "## Выделяем обучающие и тестовые данные\n",
-    "85% для обучения и 15% для тестов"
+    "В качестве скрытого параметра выступит средний доход (median_income).\n",
+    "85% данных для обучения и 15% для тестов"
    ],
    "metadata": {
     "collapsed": false
@@ -357,15 +358,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 91,
    "outputs": [
     {
-     "data": {
-      "text/plain": "((14450, 8), (2550, 8), (14450,), (2550,))"
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(14450, 8) (2550, 8) (14450,) (2550,)\n"
+     ]
     }
    ],
    "source": [
@@ -381,8 +381,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-29T16:40:24.663376500Z",
-     "start_time": "2024-09-29T16:40:24.626797800Z"
+     "end_time": "2024-09-29T17:29:49.777698Z",
+     "start_time": "2024-09-29T17:29:49.694220500Z"
     }
    },
    "id": "436490cb6bbc5c4e"
@@ -399,25 +399,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.016418210412003035\n",
-      "longitude             0.009273\n",
-      "latitude              0.025478\n",
-      "housing_median_age   -0.146553\n",
-      "total_rooms           0.792267\n",
-      "total_bedrooms       -0.601358\n",
-      "population            0.080738\n",
-      "households           -0.284904\n",
-      "median_house_value    0.657802\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
+   "execution_count": 92,
+   "outputs": [],
    "source": [
     "def linear_regression(X, y, learning_rate=0.01, iterations_num=2000):\n",
     "    n_samples, n_features = X.shape\n",
@@ -440,8 +423,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-29T16:45:14.524188700Z",
-     "start_time": "2024-09-29T16:45:10.762804400Z"
+     "end_time": "2024-09-29T17:29:49.778697900Z",
+     "start_time": "2024-09-29T17:29:49.709730800Z"
     }
    },
    "id": "96d40950b06c6b0c"
@@ -462,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 93,
    "outputs": [],
    "source": [
     "def r2(y_true, y_pred):\n",
@@ -477,8 +460,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-29T16:40:33.451511600Z",
-     "start_time": "2024-09-29T16:40:33.435916400Z"
+     "end_time": "2024-09-29T17:29:49.779201900Z",
+     "start_time": "2024-09-29T17:29:49.724462500Z"
     }
    },
    "id": "72321f0bbadc1c8b"
@@ -498,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "outputs": [
     {
      "name": "stdout",
@@ -517,8 +500,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-29T16:45:18.360762300Z",
-     "start_time": "2024-09-29T16:45:14.691862100Z"
+     "end_time": "2024-09-29T17:29:53.499431800Z",
+     "start_time": "2024-09-29T17:29:49.739024900Z"
     }
    },
    "id": "a76e82a68e79464f"
@@ -537,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 95,
    "outputs": [
     {
      "name": "stdout",
@@ -559,8 +542,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-29T16:55:01.849417900Z",
-     "start_time": "2024-09-29T16:54:58.545591500Z"
+     "end_time": "2024-09-29T17:29:56.885416400Z",
+     "start_time": "2024-09-29T17:29:53.499431800Z"
     }
    },
    "id": "6934036e144e79db"
@@ -579,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 96,
    "outputs": [
     {
      "name": "stdout",
@@ -601,8 +584,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-29T16:58:25.210241600Z",
-     "start_time": "2024-09-29T16:58:21.649778500Z"
+     "end_time": "2024-09-29T17:30:00.186567800Z",
+     "start_time": "2024-09-29T17:29:56.888418600Z"
     }
    },
    "id": "983edc7e7b8d5893"
@@ -610,7 +593,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Модель 3\n",
+    "### Модель 4\n",
     "Добавим синтетический признак - количество комнат на владельца rooms_per_household\n",
     "Результат r2=0.6410496559067105"
    ],
@@ -621,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 97,
    "outputs": [
     {
      "name": "stdout",
@@ -647,8 +630,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-29T17:15:22.563271600Z",
-     "start_time": "2024-09-29T17:15:16.791171100Z"
+     "end_time": "2024-09-29T17:30:05.947569300Z",
+     "start_time": "2024-09-29T17:30:00.186567800Z"
     }
    },
    "id": "24ae8e7a52e9808b"
