--- a/lab5/main.ipynb
+++ b/lab5/main.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Задание"
+    "# Задание\n",
+    "1. Датасет с [классификацией грибов](https://archive.ics.uci.edu/ml/datasets/Mushroom),\n",
+    "2. Отобрать **случайным** образом sqrt(n) признаков\n",
+    "3. Реализовать без использования сторонних библиотек построение дерева решений (дерево не бинарное, numpy и pandas использовать можно, использовать список списков для реализации дерева - нельзя) для решения задачи бинарной классификации \n",
+    "4. Провести оценку реализованного алгоритма с использованием Accuracy, precision и recall\n",
+    "5. Построить кривые AUC-ROC и AUC-PR (в пунктах 4 и 5 использовать библиотеки нельзя)"
    ],
    "metadata": {
     "collapsed": false
@@ -399,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "outputs": [
     {
      "name": "stdout",
